fixed a minor issue with spacing

--- a/style/style.scss
+++ b/style/style.scss
@@ -47,6 +47,7 @@ main{
     padding:2%;
     position: relative;
     bottom: 1.3em;
+    margin-top: 1em;
     #listLength{
       @include span-columns(2.5);
       margin-right: 12.35765%;
